#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-17
2016-01-05 Christopher O'Grady
- Fix EpicsDetector import

Tag: V00-03-16
2015-12-18 TJ Lane
- Added IpimbDetector
- Added explicit list of BldInfo detector types
- modified DdlDetector to have .get() instead of __call__()

Tag: V00-03-15
2015-12-18 Mikhail S. Dubrovin
- PyDetectorAccess.py - add local caching for coords_x,y,z, areas, self.mask_geo, self.pixel_size (PSAS-139)
- add examples/test_geo_time.py
	
Tag: V00-03-14
2015-12-15 Mikhail S. Dubrovin
- AreaDetector.py add returning geometry object method, add ex_cspad_quads_data.py (PSAS-139)

Tag: V00-03-13
2015-12-14 Mikhail S. Dubrovin
- app/det_ndarr_average - evaluate and save ndarray for max value, 
- ex_all_dets.py - add examples for non-complete data of MecTragetChamber
- PyDataAccess.py - add support for Epix.ElementV3 and Epix.Config100aV2 (PSAS-147)
	
Tag: V00-03-12
2015-12-09 Mikhail S. Dubrovin
- PyDetectorAccess.raw_data_cspad - fix cspad ndarray reconstruction in case of missing quads, like in MecTargetChamber.0:Cspad.0 (PSAS-139)
	
Tag: V00-03-11
2015-12-09 Mikhail S. Dubrovin
- in PyDetectorAccess.py, AreaDetector.py rename methods gain_map to gain_mask, inverse results for low/high gain pixels (PSAS-139)

Tag: V00-03-10
2015-12-08 Mikhail S. Dubrovin
- PyDetectorAccess.py, AreaDetector.py - add gain_map evaluation method using configuration (PSAS-139)
- add examples ex_cspad_gain_map.py, expyda_cspad_gain_map.py
	
Tag: V00-03-09
2015-12-04 Mikhail S. Dubrovin
- PyDataAccess, PyDetectorAccess.py, ex_new_dets - add support for Fccd, Timepix, Fli, Pimax (PSAS-139)

Tag: V00-03-08
2015-12-03 Mikhail S. Dubrovin