@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-18
+2016-01-06 Christopher O'Grady
+- Refactor the detector factory so people can query the detector
+  type for a particular source name.  Add IpimbDetector to DetectorTypes.py
+  (for non-bld detectors)
+
 Tag: V00-03-17
 2016-01-05 Christopher O'Grady
 - Fix EpicsDetector import
